Move source files into src/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(leben_allocators C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(leben_allocators main.c
-        buddy.c
-        buddy.h
-        pool.c
-        pool.h)
+add_executable(leben_allocators src/main.c
+        src/alloc/buddy.c
+        src/alloc/buddy.h
+        src/alloc/pool.c
+        src/alloc/pool.h)
